--- a/_source/BaseAdminProject/Views/User/Index.cshtml
+++ b/_source/BaseAdminProject/Views/User/Index.cshtml
@@ -22,7 +22,7 @@
                             <li class="breadcrumb-item">
                                 <a asp-controller="Account" asp-action="Index"><i class="fas fa-home"></i></a>
                             </li>
-                            <li class="breadcrumb-item active" aria-current="page"><i class="fas fa-users"></i> @ViewData["Title"]</li>
+                            <li class="breadcrumb-item active" aria-current="page">@ViewData["Title"]</li>
                         </ol>
                     </nav>
                 </div>
