--- a/_source/BaseAdminProject/src/sass/common/_full-importation.scss
+++ b/_source/BaseAdminProject/src/sass/common/_full-importation.scss
@@ -1,58 +1,43 @@
-﻿
-// Bootstrap functions
-@import '@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/functions';
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/mixins";
-
-// Argon functions
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/custom/functions";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/custom/variables";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/variables";
-
-// Argon mixins
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/custom/mixins";
+﻿@import "base";
 
 // Bootstrap components
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/root";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/reboot";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/type";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/images";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/code";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/grid";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/tables";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/forms";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/buttons";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/transitions";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/dropdown";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/button-group";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/input-group";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/custom-forms";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/nav";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/navbar";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/card";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/breadcrumb";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/pagination";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/badge";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/jumbotron";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/alert";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/progress";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/media";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/list-group";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/close";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/modal";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/tooltip";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/popover";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/carousel";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/utilities";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/print";
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/bootstrap/spinners";
+@import "bootstrap/scss/root";
+@import "bootstrap/scss/reboot";
+@import "bootstrap/scss/type";
+/*@import "bootstrap/scss/images";*/
+/*@import "bootstrap/scss/code";*/
+@import "bootstrap/scss/grid";
+@import "bootstrap/scss/tables";
+@import "bootstrap/scss/forms";
+@import "bootstrap/scss/buttons";
+@import "bootstrap/scss/transitions";
+@import "bootstrap/scss/dropdown";
+/*@import "bootstrap/scss/button-group";*/
+@import "bootstrap/scss/input-group";
+@import "bootstrap/scss/custom-forms";
+@import "bootstrap/scss/nav";
+@import "bootstrap/scss/navbar";
+@import "bootstrap/scss/card";
+@import "bootstrap/scss/breadcrumb";
+@import "bootstrap/scss/pagination";
+@import "bootstrap/scss/badge";
+/*@import "bootstrap/scss/jumbotron";*/
+@import "bootstrap/scss/alert";
+/*@import "bootstrap/scss/progress";*/
+@import "bootstrap/scss/media";
+@import "bootstrap/scss/list-group";
+@import "bootstrap/scss/close";
+/*@import "bootstrap/scss/modal";*/
+/*@import "bootstrap/scss/tooltip";*/
+/*@import "bootstrap/scss/popover";*/
+/*@import "bootstrap/scss/carousel";*/
+@import "bootstrap/scss/utilities";
+/*@import "bootstrap/scss/print";*/
+@import "bootstrap/scss/spinners";
 
 // Argon components
 /*@import '@creative-tim-official/argon-dashboard-free/assets/scss/custom/components';*/
 
-
-//
-// Components
-//
 
 // Alerts
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/alerts/alert";
@@ -80,13 +65,13 @@
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/cards/card-stats";
 
 // Charts
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/charts/chart";
+/*@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/charts/chart";*/
 
 // Close
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/close/close";
 
 // Collapse
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/collapse/accordion";
+/*@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/collapse/accordion";*/
 
 // Content
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/content/main-content";
@@ -102,7 +87,7 @@
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/dropdowns/dropdown";
 
 // Footers
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/footers/footer";
+/*@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/footers/footer";*/
 
 // Forms
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/forms/form";
@@ -123,13 +108,13 @@
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/list-groups/list-group";
 
 // Maps
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/maps/map";
+/*@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/maps/map";*/
 
 // Masks
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/masks/mask";
 
 // Modals
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/modals/modal";
+/*@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/modals/modal";*/
 
 // Navbars
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/navbars/navbar";
@@ -147,19 +132,18 @@
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/paginations/pagination";
 
 // Popovers
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/popovers/popover";
+/*@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/popovers/popover";*/
 
 // Progresses
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/progresses/progress";
+/*@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/progresses/progress";*/
 
 // Separators
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/separators/separator";
 
 // Sections
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/sections/nucleo-icons";
+/*@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/sections/nucleo-icons";*/
 
-// Tables
-@import "@creative-tim-official/argon-dashboard-free/assets/scss/core/tables/table";
+
 
 // Type
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/type/type";
@@ -167,19 +151,16 @@
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/type/display";
 @import "@creative-tim-official/argon-dashboard-free/assets/scss/core/type/heading";
 
-
-
-
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/custom/utilities';
 
 @import '~@creative-tim-official/argon-dashboard-free/assets/vendor/animate.css/animate.min.css';
 
-@import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/bootstrap-datepicker';
+
+/*@import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/bootstrap-datepicker';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/bootstrap-tagsinput';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/chartjs';
-@import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/datatables';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/dropzone';
-/*@import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/fullcalendar';*/
+@import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/fullcalendar';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/jvectormap';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/lavalamp';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/nouislider';
@@ -187,4 +168,4 @@
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/scrollbar';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/select2';
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/sweet-alert-2';
-@import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/plugin-datetimepicker';
+@import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/plugin-datetimepicker';*/
