--- a/_source/BaseAdminProject/Views/Shared/_LayoutManage.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_LayoutManage.cshtml
@@ -24,7 +24,7 @@
 <!-- Page content -->
 <div class="container-fluid mt--6">
     <div class="row">
-        <div class="col-xl-4 mb-4 mb-md-0">
+        <div class="col-xl-4 mb-4 mb-xl-0">
             <partial name="_ManageNav" />
         </div>
         <div class="col-xl-8">
