--- a/_source/BaseAdminProject/src/sass/user/index.scss
+++ b/_source/BaseAdminProject/src/sass/user/index.scss
@@ -1,1 +1,4 @@
-﻿@import '~datatables.net-bs4/css/datatables.bootstrap4.min.css';
+﻿@import "../common/base";
+
+@import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/datatables';
+@import '~datatables.net-bs4/css/datatables.bootstrap4.min.css';
