#477 fixing things based on sonar cloud

--- a/_source/BaseAdminProject/Views/Account/ChangePassword.cshtml
+++ b/_source/BaseAdminProject/Views/Account/ChangePassword.cshtml
@@ -34,7 +34,7 @@
                 <div class="input-group input-group-merge">
                     <div class="input-group-prepend">
                         <span class="input-group-text">
-                            <i class="fas fa-lock"></i>
+                            <i class="fas fa-lock" aria-hidden="true"></i>
                         </span>
                     </div>
 
@@ -42,7 +42,7 @@
 
                     <div class="input-group-append eye-password eyePassword">
                         <span class="input-group-text">
-                            <i class="fas fa-eye-slash"></i>
+                            <i class="fas fa-eye-slash" aria-hidden="true"></i>
                         </span>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                 <div class="input-group input-group-merge">
                     <div class="input-group-prepend">
                         <span class="input-group-text">
-                            <i class="fas fa-lock"></i>
+                            <i class="fas fa-lock" aria-hidden="true"></i>
                         </span>
                     </div>
 
@@ -64,7 +64,7 @@
 
                     <div class="input-group-append eye-password eyePassword">
                         <span class="input-group-text">
-                            <i class="fas fa-eye-slash"></i>
+                            <i class="fas fa-eye-slash" aria-hidden="true"></i>
                         </span>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="input-group input-group-merge">
                     <div class="input-group-prepend">
                         <span class="input-group-text">
-                            <i class="fas fa-lock"></i>
+                            <i class="fas fa-lock" aria-hidden="true"></i>
                         </span>
                     </div>
 
@@ -86,7 +86,7 @@
 
                     <div class="input-group-append eye-password eyePassword">
                         <span class="input-group-text">
-                            <i class="fas fa-eye-slash"></i>
+                            <i class="fas fa-eye-slash" aria-hidden="true"></i>
                         </span>
                     </div>
                 </div>
