--- a/_source/BaseAdminProject/Views/Account/Partials/UsernameForm.cshtml
+++ b/_source/BaseAdminProject/Views/Account/Partials/UsernameForm.cshtml
@@ -9,7 +9,7 @@
         <div class="input-group input-group-merge">
             <div class="input-group-prepend">
                 <span class="input-group-text">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" aria-hidden="true"></i>
                 </span>
             </div>
             <input id="userNameInput" asp-for="UserName" class="form-control">
