--- a/_source/BaseAdminProject/Views/User/AddUser.cshtml
+++ b/_source/BaseAdminProject/Views/User/AddUser.cshtml
@@ -22,10 +22,14 @@
                     <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                             <li class="breadcrumb-item">
-                                <a asp-controller="Account" asp-action="Index"><i class="fas fa-home"></i></a>
+                                <a asp-controller="Account" asp-action="Index">
+                                    <i class="fas fa-home" aria-hidden="true"></i>
+                                </a>
                             </li>
                             <li class="breadcrumb-item">
-                                <a asp-controller="User" asp-action="Index"><i class="fas fa-users"></i> Usuários</a>
+                                <a asp-controller="User" asp-action="Index">
+                                    <i class="fas fa-users" aria-hidden="true"></i> Usuários
+                                </a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">
                                 @ViewData["Title"]
@@ -60,7 +64,7 @@
                                         <div class="input-group input-group-merge">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-user"></i>
+                                                    <i class="fas fa-user" aria-hidden="true"></i>
                                                 </span>
                                             </div>
 
@@ -74,7 +78,7 @@
                                         <div class="input-group input-group-merge">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-calendar-day"></i>
+                                                    <i class="fas fa-calendar-day" aria-hidden="true"></i>
                                                 </span>
                                             </div>
 
@@ -88,7 +92,7 @@
                                         <div class="input-group input-group-merge">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-user"></i>
+                                                    <i class="fas fa-user" aria-hidden="true"></i>
                                                 </span>
                                             </div>
 
@@ -102,7 +106,7 @@
                                         <div class="input-group input-group-merge">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-envelope"></i>
+                                                    <i class="fas fa-envelope" aria-hidden="true"></i>
                                                 </span>
                                             </div>
 
@@ -116,7 +120,7 @@
                                         <div class="input-group input-group-merge">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-phone"></i>
+                                                    <i class="fas fa-phone" aria-hidden="true"></i>
                                                 </span>
                                             </div>
 
@@ -131,7 +135,7 @@
                                         <div class="input-group input-group-merge">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-user-tag"></i>
+                                                    <i class="fas fa-user-tag" aria-hidden="true"></i>
                                                 </span>
                                             </div>
 
@@ -147,7 +151,7 @@
                                         <div class="input-group input-group-merge">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-lock"></i>
+                                                    <i class="fas fa-lock" aria-hidden="true"></i>
                                                 </span>
                                             </div>
 
@@ -155,7 +159,7 @@
 
                                             <div class="input-group-append eye-password eyePassword">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-eye-slash"></i>
+                                                    <i class="fas fa-eye-slash" aria-hidden="true"></i>
                                                 </span>
                                             </div>
                                         </div>
@@ -167,7 +171,7 @@
                                         <div class="input-group input-group-merge">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-lock"></i>
+                                                    <i class="fas fa-lock" aria-hidden="true"></i>
                                                 </span>
                                             </div>
 
@@ -175,7 +179,7 @@
 
                                             <div class="input-group-append eye-password eyePassword">
                                                 <span class="input-group-text">
-                                                    <i class="fas fa-eye-slash"></i>
+                                                    <i class="fas fa-eye-slash" aria-hidden="true"></i>
                                                 </span>
                                             </div>
                                         </div>
