--- a/_source/BaseAdminProject/Views/Account/Login.cshtml
+++ b/_source/BaseAdminProject/Views/Account/Login.cshtml
@@ -50,7 +50,7 @@
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
-                                            <i class="fas fa-user"></i>
+                                            <i class="fas fa-user" aria-hidden="true"></i>
                                         </span>
                                     </div>
 
@@ -66,7 +66,7 @@
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
-                                            <i class="fas fa-lock"></i>
+                                            <i class="fas fa-lock" aria-hidden="true"></i>
                                         </span>
                                     </div>
 
@@ -74,7 +74,7 @@
 
                                     <div class="input-group-append eye-password eyePassword">
                                         <span class="input-group-text">
-                                            <i class="fas fa-eye-slash"></i>
+                                            <i class="fas fa-eye-slash" aria-hidden="true"></i>
                                         </span>
                                     </div>
                                 </div>
