--- a/_source/BaseAdminProject/Views/Account/Partials/EmailForm.cshtml
+++ b/_source/BaseAdminProject/Views/Account/Partials/EmailForm.cshtml
@@ -10,7 +10,7 @@
         <div class="input-group input-group-merge">
             <div class="input-group-prepend">
                 <span class="input-group-text">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" aria-hidden="true"></i>
                 </span>
             </div>
 
@@ -20,7 +20,7 @@
                 @if (Model.IsConfirmed)
                 {
                     <span data-toggle="tooltip" title="Email confirmado" class="input-group-text text-success">
-                        <i class="fas fa-check"></i>
+                        <i class="fas fa-check" aria-hidden="true"></i>
                     </span>
                 }
                 else
