--- a/_source/BaseAdminProject/Views/Account/Partials/PhoneForm.cshtml
+++ b/_source/BaseAdminProject/Views/Account/Partials/PhoneForm.cshtml
@@ -9,7 +9,7 @@
         <div class="input-group input-group-merge">
             <div class="input-group-prepend">
                 <span class="input-group-text">
-                    <i class="fas fa-phone"></i>
+                    <i class="fas fa-phone" aria-hidden="true"></i>
                 </span>
             </div>
 
