--- a/_source/BaseAdminProject/Views/Account/ResetPassword.cshtml
+++ b/_source/BaseAdminProject/Views/Account/ResetPassword.cshtml
@@ -48,7 +48,7 @@
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
-                                            <i class="fas fa-user"></i>
+                                            <i class="fas fa-user" aria-hidden="true"></i>
                                         </span>
                                     </div>
 
@@ -63,7 +63,7 @@
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
-                                            <i class="fas fa-lock"></i>
+                                            <i class="fas fa-lock" aria-hidden="true"></i>
                                         </span>
                                     </div>
 
@@ -71,7 +71,7 @@
 
                                     <div class="input-group-append eye-password eyePassword">
                                         <span class="input-group-text">
-                                            <i class="fas fa-eye-slash"></i>
+                                            <i class="fas fa-eye-slash" aria-hidden="true"></i>
                                         </span>
                                     </div>
                                 </div>
@@ -85,7 +85,7 @@
                                 <div class="input-group input-group-merge">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
-                                            <i class="fas fa-lock"></i>
+                                            <i class="fas fa-lock" aria-hidden="true"></i>
                                         </span>
                                     </div>
 
@@ -93,7 +93,7 @@
 
                                     <div class="input-group-append eye-password eyePassword">
                                         <span class="input-group-text">
-                                            <i class="fas fa-eye-slash"></i>
+                                            <i class="fas fa-eye-slash" aria-hidden="true"></i>
                                         </span>
                                     </div>
                                 </div>
