--- a/_source/BaseAdminProject/Views/Home/Index.cshtml
+++ b/_source/BaseAdminProject/Views/Home/Index.cshtml
@@ -20,7 +20,9 @@
                     <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                             <li class="breadcrumb-item">
-                                <a asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i></a>
+                                <a asp-controller="Home" asp-action="Index">
+                                    <i class="fas fa-home" aria-hidden="true"></i>
+                                </a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">@ViewData["Title"]</li>
                         </ol>
