--- a/_source/BaseAdminProject/Views/Shared/_Sidenav.cshtml
+++ b/_source/BaseAdminProject/Views/Shared/_Sidenav.cshtml
@@ -12,9 +12,9 @@
                 <div class="sidenav-toggler d-none d-xl-block" data-action="sidenav-unpin"
                      data-target="#sidenav-main">
                     <div class="sidenav-toggler-inner">
-                        <i class="sidenav-toggler-line"></i>
-                        <i class="sidenav-toggler-line"></i>
-                        <i class="sidenav-toggler-line"></i>
+                        <i class="sidenav-toggler-line" aria-hidden="true"></i>
+                        <i class="sidenav-toggler-line" aria-hidden="true"></i>
+                        <i class="sidenav-toggler-line" aria-hidden="true"></i>
                     </div>
                 </div>
             </div>
@@ -27,13 +27,13 @@
                 <ul class="navbar-nav mb-md-3">
                     <li class="nav-item">
                         <a class="nav-link @Html.GetActiveClass(Context.Request, Url.Action("Index", "Home"))" asp-controller="Home" asp-action="Index">
-                            <i class="fas fa-home text-primary"></i>
+                            <i class="fas fa-home text-primary" aria-hidden="true"></i>
                             <span class="nav-link-text">Home</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link @Html.GetActiveClass(Context.Request, Url.Action("Index", "User"))" asp-controller="User" asp-action="Index">
-                            <i class="fas fa-users text-primary"></i>
+                            <i class="fas fa-users text-primary" aria-hidden="true"></i>
                             <span class="nav-link-text">Usuários</span>
                         </a>
                     </li>
