--- a/_source/BaseAdminProject/src/sass/common/index.scss
+++ b/_source/BaseAdminProject/src/sass/common/index.scss
@@ -1,8 +1,8 @@
-﻿$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
-
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
 
 //Update colors of bootstrap to change all application
