--- a/_source/BaseAdminProject/src/sass/user/index.scss
+++ b/_source/BaseAdminProject/src/sass/user/index.scss
@@ -1,4 +1,3 @@
-﻿@import "../common/base";
-
+@import "../common/base";
 @import '@creative-tim-official/argon-dashboard-free/assets/scss/core/vendors/datatables';
 @import '~datatables.net-bs4/css/datatables.bootstrap4.min.css';
